--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
         nodejs: 14
   build:
     commands:
-      - npm install time
+      - npm install
       - export BUCKET=cf-templates-node-sa-east-1
       - aws cloudformation package --template-file template.yml --s3-bucket $BUCKET --output-template-file outputtemplate.yml
 artifacts:
