--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
     commands:
       - npm install
       - export BUCKET=cf-templates-node-sa-east-1
-      - aws cloudformation package --template-file template.yml --s3-bucket $BUCKET --output-template-file outputtemplate.yml
+      - aws cloudformation package --template-file template.yml --s3-bucket cf-templates-node-sa-east-1 --output-template-file outputtemplate.yml
 artifacts:
   type: zip
   files:
